shared_library('lba-mutogene-cogl',
               'lba-mutogene-cogl.c',
               dependencies: [bombolla_dep, cogl_pango_dep],
               link_with: [lba_base, bombolla_icogl]
              )

shared_library('lba-mutogene-cogl-cube',
               'lba-mutogene-cogl-cube.c',
               dependencies: [bombolla_dep, cogl_pango_dep],
               link_with: [lba_base, bombolla_icogl]
              )

shared_library('lba-cogl-label',
               'lba-cogl-label.c',
               dependencies: [bombolla_dep, cogl_pango_dep],
               link_with: [lba_base, bombolla_icogl]
              )
